<resources>
    <!--Header/Toolbar-->
    <string name="toolbar_title">eStudentloan</string>
    <string name="app_name">eStudentloan</string>
    <string name="login_title">eStudentloan</string>
    <string name="news_tap">News</string>
    <string name="document_tap">Document</string>

    <!--Button/View-->
    <string name="button_login">Login</string>
    <string name="register">New User? Register here</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="action_settings">Settings</string>
    <string name="registration">Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnRegister">Register</string>
    <string name="member_already_ask">Already a member? Login</string>
    <string name="btnChange">Change</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="change_password">Change Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="btnSave">Save</string>
    <string name="send">Send</string>
    <string name="edit_account">Edit Account</string>
    <string name="menu_home">Home</string>
    <string name="menu_log_in">Log In</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_help">Contact Us</string>
    <string name="menu_log_out">Log Out</string>
    <string name="student_id">Student ID</string>

    <!--Notice/Announce-->
    <string name="login_success">Login Successful</string>
    <string name="login_error_message">Username or Password is incorrect.</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="network_error">Network Error, please try again next time</string>
    <string name="forget_password_success">New password has been send to your email</string>
    <string name="new_password_email">Forget Password</string>
    <string name="change_password_success">Change password successful</string>
    <string name="change_password_failed">Change password failed</string>
    <string name="valid_password_input">between 4 and 10 alphanumeric characters</string>
    <string name="valid_email_input">enter a valid email address</string>
    <string name="invalid_confirm_password">confirm password doesn\'t match with password</string>
    <string name="edit_account_success">Edit account successful</string>
    <string name="edit_account_failed">Edit account failed</string>
    <string name="valid_last_name_input">enter valid last name</string>
    <string name="valid_first_name_input">enter valid first name</string>
    <string name="valid_stuid_input">enter valid student id</string>
    <string name="no_input_text">at least 1 characters</string>
    <string name="email_already_use">This email is already used</string>
    <string name="register_success">Register Successful</string>
    <string name="register_failed">Register failed</string>

    <!--Handled Menu-->
    <string name="help_selected">Contact Us Selected</string>
    <string name="home_selected">Home Selected</string>
    <string name="login_selected">Login Selected</string>
    <string name="logout_selected">Logout Successful</string>
    <string name="change_password_selected">Change Password Selected</string>
    <string name="edit_account_selected">Edit Account Selected</string>
    <string name="setting_selected">Setting Selected</string>
    <string name="wrong_selected">Somethings Wrong</string>
    <string name="exit_ask">Do you want to exit?</string>
    <string name="exit_title">Exit</string>
    <string name="btnExit">Yes</string>
    <string name="btnNo">No</string>
    <string name="auth_failed">Sign up failed</string>
    <string name="unavailable">This section currently unavailable</string>
    <string name="contact_facebook">กองทุนเงินให้กู้ยืมเพื่อการศึกษา สถาบันเทคโนโลยีไทย-ญี่ปุ่น</string>
    <string name="contact_web">ฝ่ายกิจการนักศักษา สถาบันเทคโนโลยีไทย-ญี่ปุ่น</string>
    <string name="contact_phone">ฝ่ายกิจการนักศักษา โทร 02-763-2620-4</string>
    <string name="contact_feedback">Send Feedback</string>
    <string name="phone_icon_desc">Phone Icon</string>
    <string name="feedback_icon_desc">Feedback Icon</string>
    <string name="web_icon_desc">Web Icon</string>
    <string name="facebook_icon_desc">Facebook Icon</string>
    <string name="no_data">No further detail</string>


</resources>
