<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_home"
            android:checked="true"
            android:icon="@drawable/ic_home_black"
            android:title="@string/menu_home"/>

        <item
            android:id="@+id/drawer_pass"
            android:icon="@drawable/ic_change_pass"
            android:title="@string/change_password"/>

        <item
            android:id="@+id/drawer_edit"
            android:icon="@drawable/ic_create_black"
            android:title="@string/edit_account"/>


        <!--<item-->
            <!--android:id="@+id/drawer_settings"-->
            <!--android:icon="@drawable/ic_settings"-->
            <!--android:title="@string/menu_setting"/>-->

        <item
            android:id="@+id/drawer_help"
            android:icon="@drawable/ic_help"
            android:title="@string/menu_help"/>

        <item
            android:id="@+id/drawer_logout"
            android:icon="@drawable/ic_loging_in_out"
            android:title="@string/menu_log_out"/>

    </group>
</menu>