<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:clickable="true"
                android:id="@+id/facebook"
                android:background="@drawable/custom_bg">

                <ImageView
                    android:contentDescription="@string/facebook_icon_desc"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_facebook"/>

                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/contact_facebook"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:clickable="true"
                android:id="@+id/website"
                android:background="@drawable/custom_bg">

                <ImageView
                    android:contentDescription="@string/web_icon_desc"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:src="@drawable/logo_tni"/>

                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/contact_web"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:clickable="true"
                android:id="@+id/phone"
                android:background="@drawable/custom_bg"
                android:layout_marginBottom="2dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/phone_icon_desc"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_phone"/>

                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/contact_phone"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:clickable="true"
                android:id="@+id/feedback"
                android:background="@drawable/custom_bg"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:contentDescription="@string/feedback_icon_desc"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_feedback"/>

                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:text="@string/contact_feedback"/>

            </LinearLayout>

        </LinearLayout>

</layout>