<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A4C8D8"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <FrameLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <LinearLayout
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/login_title"
                        android:textColor="#81a4b4"
                        android:textSize="24sp"
                        android:textStyle="bold"/>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_marginTop="4dp">

                        <EditText
                            android:id="@+id/edtEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/tap_bg_selector"
                            android:hint="@string/email_address"
                            android:inputType="text"
                            android:maxLines="1"
                            android:padding="16dp"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_marginTop="4dp">

                        <EditText
                            android:id="@+id/edtPass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/tap_bg_selector"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:padding="16dp"/>

                    </android.support.design.widget.TextInputLayout>


                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btnLog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/btn_account_selector"
                        android:text="@string/button_login"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="14dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/forgetpass"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/forget_password"
                            android:textColor="@drawable/textview_login_selector"/>

                        <TextView
                            android:id="@+id/register"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.2"
                            android:gravity="center"
                            android:text="@string/register"
                            android:textColor="@drawable/textview_login_selector"/>
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
        </ScrollView>
    </LinearLayout>
</layout>

