<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="none">

            <FrameLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="30dp"
                    android:layout_marginTop="50dp"
                    android:background="@android:color/white"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="25dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:gravity="center"
                        android:text="@string/change_password"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        android:textStyle="bold"/>


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_marginTop="4dp">

                        <EditText
                            android:id="@+id/oldPass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/old_password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:padding="16dp"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_marginTop="4dp">

                        <EditText
                            android:id="@+id/newPass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/new_password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:padding="16dp"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_marginTop="4dp">

                        <EditText
                            android:id="@+id/confirmNewPass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/confirm_new_password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:padding="16dp"/>

                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/btnCancel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="24dp"
                            android:layout_weight="1"
                            android:background="@drawable/btn_account_selector"
                            android:text="@string/btnCancel"
                            android:textColor="@android:color/white"
                            android:textSize="18sp"/>

                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/btnChangePass"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:layout_marginTop="24dp"
                            android:layout_weight="1"
                            android:background="@drawable/btn_account_selector"
                            android:text="@string/btnChange"
                            android:textColor="@android:color/white"
                            android:textSize="18sp"/>
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
        </ScrollView>
    </LinearLayout>
</layout>
